--- a/webpack.template.html
+++ b/webpack.template.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body>
+  <body style="margin: 0; padding: 0;">
     <div id="root">
     </div>
   </body>
