starting new cache now has correct cache format

--- a/webpack.template.html
+++ b/webpack.template.html
@@ -16,7 +16,7 @@
       width: 13px;
       height: 13px;
       border-radius: 50%;
-      background: #6fffb0;
+      background: #7A2EE8;
       animation: lds-grid 1.2s linear infinite;
     }
     .lds-grid div:nth-child(1) {
